--- a/Basic/index.html
+++ b/Basic/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src = "App.ts"></script>
+  <script src = "main.js"></script>
 </body>
 </html>
